Fixed UI issues in most of the pages. especially alignment, margins and in general look and feel

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -3167,20 +3167,19 @@ table th[class*="span"],
 .close {
   float: right;
   font-size: 20px;
-  font-weight: bold;
   line-height: 20px;
-  color: #000000;
+  color: whitesmoke;
   text-shadow: 0 1px 0 #ffffff;
-  opacity: 0.2;
+  opacity: 0.4;
   filter: alpha(opacity=20);
 }
 
 .close:hover,
 .close:focus {
-  color: #000000;
+  color: #fff;
   text-decoration: none;
   cursor: pointer;
-  opacity: 0.4;
+  opacity: 0.8;
   filter: alpha(opacity=40);
 }
 
@@ -3881,6 +3880,8 @@ input[type="submit"].btn.btn-mini {
           border-radius: 4px;
 }
 
+.alert {margin: 20px 38px 0px 38px;}
+
 .alert,
 .alert h4 {
   color: #c09853;
@@ -3898,9 +3899,9 @@ input[type="submit"].btn.btn-mini {
 }
 
 .alert-success {
-  color: #468847;
-  background-color: #dff0d8;
-  border-color: #d6e9c6;
+  color: white;
+  background-color: darkgreen;
+  border-color: whitesmoke;
 }
 
 .alert-success h4 {
@@ -3909,9 +3910,9 @@ input[type="submit"].btn.btn-mini {
 
 .alert-danger,
 .alert-error {
-  color: #b94a48;
-  background-color: #f2dede;
-  border-color: #eed3d7;
+  color: white;
+  background-color: #b94a48;
+  border-color: whitesmoke;
 }
 
 .alert-danger h4,
