--- a/app/assets/stylesheets/customized_css.css
+++ b/app/assets/stylesheets/customized_css.css
@@ -393,7 +393,7 @@
 }
 .triangle-with-shadow:after {
     content : "";
-    position : absolute;
+    position : relative;
     width : 35px;
     height : 50px;
     background : #ffffff;
@@ -469,7 +469,14 @@
 }
 
 .myvision_title{
-    color: #6e6d73;
+    color: #c1c1c1;
+    font-size: 34px;
+    font-weight: bold;
+    line-height: 40px;
+}
+
+.myvision_title_dark{
+    color: #4b4b4b;
     font-size: 34px;
     font-weight: bold;
     line-height: 40px;
@@ -680,7 +687,7 @@ padding-left: 20px;
     padding-top: 20px;
 }
 .cameo_friends{
-    height: 410px; overflow: auto;position: relative;padding: 20px 5px;background-color: #d1d2d4;
+    overflow: auto;position: relative;padding: 7px 0px;background-color: #d1d2d4;
 }
 .contributors_image_size{
     width: 44px;height: 44px;float: left;
